<resources>
    <!-- Variables generales -->
    <string name="app_name">AgendaVoice</string>
    <string name="developer1">Anthony Condori Guillén</string>
    <string name="developer2">Sarain Mamani Lucas</string>
    <string name="desarrollo">Desarrollado por</string>
    <string name="version">versión 1.0.0</string>

    <!-- Crear variables para el Login -->
    <string name="titulo_login">Iniciar Sesión</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_usuario">Ingresar Usuario</string>
    <string name="txt_password">Ingresar Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_ingre_google">Ingresar sesión con Google</string>
    <string name="btn_ingre_facebook">Ingresar sesión con Facebook</string>
    <string name="login_register_prompt">Aún no tienes una cuenta? <u>Registrate aquí</u></string>
    <string name="btn_google">Google</string>
    <string name="lbl_ingre_con">Ingresa con</string>

    <!-- Registro -->
    <string name="titulo_registro">Crear Cuenta</string>
    <string name="lbl_nombre">Nombre completo</string>
    <string name="txt_nombre">Ingresar nombre</string>
    <string name="lbl_usuario_reg">Usuario</string>
    <string name="txt_usuario_reg">Ingresar usuario</string>
    <string name="lbl_correo">Correo electrónico</string>
    <string name="txt_correo">Ingresar correo</string>
    <string name="lbl_numero">Número de teléfono</string>
    <string name="txt_numero">Ingresar número</string>
    <string name="lbl_password_reg">Contraseña</string>
    <string name="txt_password_reg">Ingresar contraseña</string>
    <string name="lbl_confirmar_password">Confirmar contraseña</string>
    <string name="txt_confirmar_password">Reingresar contraseña</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="lbl_tengo_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="registro_iniciar_sesion">Ya tienes una cuenta? <u>Inicia Sesión aquí</u></string>
    <string name="lbl_registrate_con">O registrate con</string>
    <string name="lbl_terminos_condiciones">He leído y acepto los términos y condiciones de uso.</string>
    <string name="default_web_client_id">500031057257-q0mnkludpm2edejp41nq9gq28e6qd3rc.apps.googleusercontent.com</string>
    <string name="category_icon">Category icon</string>
    <!-- MODIFICACIÓN: INSERTA TUS VALORES REALES DE META -->
    <string name="facebook_app_id">1117855066728102</string>
    <string name="fb_login_protocol_scheme">fb1117855066728102</string>
    <string name="facebook_client_token">e0e86daf4f95f978a812bd49f6eef350</string>


    <string name="settings_title">Ajustes</string>
    <string name="fab_add_task_description">Crear nueva tarea</string>


</resources>