<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525">

    <!-- Logo centrado -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/icono_agenda"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Texto debajo del logo -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="from"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="160dp" />
    <!-- Texto debajo del logo -->
    <TextView
        android:id="@+id/nameCreater1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer1"
        android:textColor="@android:color/white"
        android:textSize="18.5sp"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="180dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameCreater2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer2"
        android:textColor="@android:color/white"
        android:textSize="18.5sp"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>
