<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo_agenda"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/md_theme_onPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <!-- Contenedor para el rectángulo de fondo y el formulario -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        >

        <!-- Rectángulo de fondo gris con esquinas redondeadas -->
        <View
            android:id="@+id/half_background_view"
            android:layout_width="match_parent"
            android:layout_height="355dp"
            android:layout_gravity="bottom"
            android:background="@drawable/half_bottom_background" />

        <!-- Contenedor del formulario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-80dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_background"
            android:padding="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_tituloLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="@string/titulo_login"
                android:textColor="@color/md_theme_onPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/lbl_usuario"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/md_theme_onPrimary"
                    android:textColorHint="@color/md_theme_outline"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/lock_keyhole"
                    android:drawablePadding="8dp"
                    android:hint="@string/lbl_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@color/md_theme_onPrimary"
                    android:textColorHint="@color/md_theme_outline"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ingresar"
                style="@style/RegistroButton"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="-12dp"
                android:text="@string/btn_ingresar"
                android:textColor="@color/md_theme_onPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="16dp" />
        </LinearLayout>

        <!-- Contenedor para la sección de "Ingresar con" y los botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <!-- Línea y texto "Ingresar con" -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp">
                <!-- Línea izquierda -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/md_theme_outline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_ingre_con"
                    android:textColor="@color/md_theme_outlineVariant"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <!-- Línea derecha -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/md_theme_outline" />
            </LinearLayout>

            <!-- Contenedor vertical para los botones de redes sociales -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingStart="45dp"
                android:paddingEnd="45dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGoogle"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/btn_ingre_google"
                    android:backgroundTint="@color/md_theme_gris_semiTransparent"
                    android:textColor="@android:color/white"
                    app:cornerRadius="16dp"
                    app:icon="@drawable/icon_google"
                    app:iconGravity="textStart"
                    android:textStyle="bold"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFacebook"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/btn_ingre_facebook"
                    android:backgroundTint="@color/md_theme_gris_semiTransparent"
                    android:textColor="@android:color/white"
                    app:cornerRadius="16dp"
                    app:icon="@drawable/icon_fb"
                    app:iconGravity="textStart"
                    android:textStyle="bold"
                    app:iconTint="@null" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>
