<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MenuActivity">

    <!-- Sección del logo (20% del alto) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_agenda"/>
    </LinearLayout>

    <!-- Texto del título (10% del alto) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_tituloApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/md_theme_onPrimary"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Animación Lottie (40% del alto) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:adjustViewBounds="true"
            app:lottie_fileName="calendar_animation.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>

    <!-- Sección inferior: fondo redondeado + botones (30% del alto) -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <!-- Rectángulo de fondo gris con esquinas redondeadas (anclado abajo) -->
        <View
            android:id="@+id/half_background_view"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_gravity="bottom"
            android:background="@drawable/half_bottom_background" />

        <!-- Contenedor de los botones, centrado y encima del fondo -->
        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp" >

            <!-- Botón Registrarse -->
            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/gradient_button">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_registrarse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/btn_registrar"
                    android:textColor="@color/md_theme_onPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="100dp"/>
            </FrameLayout>

            <!-- Botón Ingresar -->
            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:background="@drawable/rounded_border_button">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_iniciar_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/btn_ingresar"
                    android:textColor="@color/md_theme_onPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="100dp"/>
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
